jump fix

--- a/app/Mainpage/Awards/Awards.module.scss
+++ b/app/Mainpage/Awards/Awards.module.scss
@@ -17,7 +17,7 @@
    }
    &__title {
       text-align: center;
-      font-size: 40px;
+      font-size: 36px;
       font-weight: 600;
       @media (max-width: 490px) {
          font-size: 24px;
