--- a/app/Mainpage/Intro/Intro.module.scss
+++ b/app/Mainpage/Intro/Intro.module.scss
@@ -1,10 +1,9 @@
-
 .video__container {
    position: absolute;
    left: 0;
    top: 0;
    height: 100vh;
-   width: 100%;
+   width: calc(100vw - 17px);
    object-fit: cover;
    z-index: 4;
    transition: 0.7s;
@@ -15,5 +14,5 @@
    bottom: 0;
    width: 100%;
    z-index: 4;
-   box-shadow: 0px 0px 40px 49px rgba(0,0,0,1);
+   box-shadow: 0px 0px 40px 49px rgba(0, 0, 0, 1);
 }
