--- a/app/Mainpage/ReferenceProject/ReferenceProject.module.scss
+++ b/app/Mainpage/ReferenceProject/ReferenceProject.module.scss
@@ -8,7 +8,6 @@
    &__title {
       font-size: 36px;
       font-weight: 700;
-      text-transform: uppercase;
       text-align: center;
       padding: 0 0 60px 0;
       @media (max-width: 490px) {
