--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -88,7 +88,7 @@
    position: fixed;
    left: 0;
    top: 0;
-   width: 100%;
+   width: 100vw;
    height: 100%;
    z-index: 99;
    display: flex;
